# ngyn-flappy

./: .gitmodules  CMakeLists.txt  README.md  resources.rc
src/: bird.cpp  bird.hpp  dog.cpp  dog.hpp  game.cpp  game.hpp  main.cpp  obstacle.cpp  obstacle.hpp  obstacle_manager.cpp  obstacle_manager.hpp  pipe.cpp  pipe.hpp  ui.cpp  ui.hpp
